<resources>
    <string name="app_name">Job4j Exam</string>
    <string name="hello">Hello People</string>
    <string name="back_button">Назад</string>
    <string name="next_button">Вперед</string>
    <string name="hint_button">Подсказка</string>
    <string name="list_exams_button">Список экзаменов</string>
    <string name="your_result">Your result</string>
    <string name="title">Add Exam</string>
    <string name="name">Имя</string>
    <string name="name_test">Имя теста</string>
    <string name="save">Сохранить</string>
    <string name="demo_text">Ответ</string>
    <string name="address">Адрес</string>
    <string name="name_object">Имя объекта</string>
    <string name="name_customer">ФИО заказчика</string>
    <string name="date_testing">Дата проведения испытания</string>
    <string name="temperature">Температура воздуха</string>
    <string name="humidity">Влажность воздуха</string>
    <string name="pressure">Атмосферное давление</string>
    <string name="number_report">Номер отчета</string>
    <string name="city">Город</string>
    <string name="street_home">Улица и дом</string>
    <string name="domain">Выберите область</string>
    <string-array name="array_domain">
        <item>Московская</item>
        <item>Санкт-Петербург</item>
    </string-array>
    <string-array name="dates">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="months">
        <item>Янв</item>
        <item>Фев</item>
        <item>Март</item>
    </string-array>
    <string-array name="years">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>
</resources>
